# iu-rl

./: .gitignore  README.md  RL_Lab_1.ipynb  RL_Lab_2.ipynb  pyproject.toml
Assignment01/: Assignment01.ipynb  artem_chernitsa.py  pyproject.toml  test_in.txt  test_out.txt  tests.txt
Assignment02/: Artem_Chernitsa.ipynb  Artem_Chernitsa.py  Assignment02.ipynb  infile.txt  model_v0.pt  outfile.txt
week01/: RL_Lab_1_Artem_Chernitsa.ipynb
week02/: RL_Lab_2_Artem_Chernitsa.ipynb
week03/: RL_Lab_3_Artem_Chernitsa.ipynb
week04/: RL_Lab_4_Artem_Chernitsa.ipynb
week05/: RL_Lab_5_Artem_Chernitsa.ipynb
week06/: RL_Lab_6.ipynb
