[tool.poetry]
name = "assignment01"
version = "0.1.0"
description = ""
authors = ["aalexren <chernicaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
